# FAST

./: Cargo.toml  README.md  build.rs  build_release.py  meson.build
include/: fast.h  loop.h  server.h  stream.h
src/: floop.rs  lib.rs  server.rs  stream.rs  thread_flag.rs  userdata.rs
src/stream/: buffer.rs  callback.rs  error.rs
test/: .gitignore  Makefile  test1-stream.c  test2-stream-cb.c
